--- a/app/src/main/res/layout/activity_controller.xml
+++ b/app/src/main/res/layout/activity_controller.xml
@@ -70,6 +70,7 @@
         android:layout_marginTop="8dp"
         android:backgroundTint="@android:color/holo_red_dark"
         android:text="BREAK"
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
