--- a/app/src/main/res/layout/activity_controller.xml
+++ b/app/src/main/res/layout/activity_controller.xml
@@ -96,4 +96,22 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/listViewMessages" />
 
+    <ProgressBar
+        android:id="@+id/progressBarDistanceSensor"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="150dp"
+        android:layout_height="30dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:max="255"
+        android:progress="0"
+        android:progressDrawable="@drawable/distance_bar_states"
+        android:rotation="270"
+        app:layout_constraintBottom_toTopOf="@+id/seekBarSteer"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/buttonEmergencyBreak"
+        app:layout_constraintTop_toBottomOf="@+id/listViewMessages" />
+
 </android.support.constraint.ConstraintLayout>
